Name: vcache-seq
Version: 0.1.0
Synopsis: finger-tree sequences for VCache 
Category: Database
Description:
  VCache supports larger-than-memory values with caching, persistence,
  and structure sharing. Effective use of VCache requires useful data
  structures be modeled above it. The sequence is useful for modeling 
  arrays and deques.  
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/haskell-vcache-trie

Package-Url: 
Copyright: (c) 2015 by David Barbour
License: BSD3
license-file: LICENSE
Stability: experimental
build-type: Simple
cabal-version: >= 1.16.0.3

Source-repository head
  type: git
  location: http://github.com/dmbarbour/haskell-vcache.git

Library
  hs-Source-Dirs: hsrc_lib
  default-language: Haskell2010
  Build-Depends: base (>= 4.6 && < 5)
    , bytestring
    , bytestring-builder
    , array
    , vcache (>= 0.2.3)

  Exposed-Modules:
    Data.VCache.Seq
    Data.VCache.Seq.Type

  Other-Modules:

    Strict
    Ident
   
  ghc-options: -Wall -auto-all

